<resources>
    <string name="app_name">PracticalExam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_number_here">Enter number here</string>
    <string name="to">TO</string>
    <string name="from">FROM</string>
    <string name="convert">CONVERT</string>
    <string name="result">Result:</string>
    <string name="resultLabel">result</string>
    <string name="history">HISTORY</string>
    <string name="date">Date</string>
    <string name="number">Number</string>
    <string name="fromLabel">From:</string>
    <string name="dateLabel">Date:</string>
    <string name="toLabel">To:</string>
    <string name="numberLabel">Number:</string>
</resources>